2001-11-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-version.c (match_symbol): Optimize error handling for size.
	(_dl_check_map_versions): Likewise.

2001-11-06  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Don't call
	_dl_signal_error directly, always use lose.  Set fd to -1 after
	file is closed.
	(lose): Don't call close if fd == -1.

2001-11-07  Kaoru Fukui  <k_fukui@highway.ne.jp>

	* manual/charset.texi: Fix typo @w[ISO 6937] to  @w{ISO 6937}.
	 Also fix typo @code {mbsinit} to @code{mbsinit}.

2001-11-06  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-profile.c: Replace state variable with simple flag named
	running.  Remove commented-out code.

	* elf/dl-load.c (decompose_rpath): Optimize error handling for size.
	(_dl_init_paths): Likewise.
	(_dl_map_object_from_fd): Likewise.
	* elf/dl-reloc.c (_dl_relocate_object): Likewise.

2001-11-06  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/powerpc/sysdep.h: Include sysdeps/unix/powerpc/sysdep.h
	instead of sysdeps/powerpc/elf/sysdep.h and sysdeps/unix/sysdep.h.

	* sysdeps/unix/sysv/linux/powerpc/sysdep.h: Don't include
	sysdeps/powerpc/elf/sysdep.h.
	Reported by Kaoru Fukui <k_fukui@highway.ne.jp>.

2001-11-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (process_dl_debug): Rewritten.  Optimized for size not
	speed.
	(process_envvars): Some more optimizations.
	* sysdeps/generic/ldsodefs.h (DL_DEBUG_HELP): New macro.

	* elf/elf.h: Add dynamic tag definitions for prelinking.

	* elf/rtld.c (process_envvars): Avoid using array of string pointers.
	Rewrite code to remove environment varables for SUID binaries.
	Small optimization in LD_PROFILE handling.
	* sysdeps/generic/unsecvars.h: Adjust format for process_envvars
	changes.
	* sysdeps/unix/sysv/linux/i386/dl-librecon.h: Likewise.

	* sysdeps/generic/dl-sysdep.c: Don't initialize _dl_cpuclock_offset.

	* elf/dl-reloc.c (_dl_reloc_bad_type): Rewrite to not use writable